test/cases/errors/mjs-non-fully-specified/errors.js
module.exports = [
	[/Can't resolve '.\/dependency'/, /Did you mean 'dependency\.js'\?/]
];
